@startuml

title __CODEBASE's Class Diagram__\n

  namespace com.mojang.tower {
    class com.mojang.tower.Bitmaps {
    }
  }
  

  namespace com.mojang.tower {
    class com.mojang.tower.Entity {
    }
  }
  

  namespace com.mojang.tower {
    class com.mojang.tower.FarmPlot {
    }
  }
  

  namespace com.mojang.tower {
    class com.mojang.tower.House {
    }
  }
  

  namespace com.mojang.tower {
    class com.mojang.tower.HouseType {
    }
  }
  

  namespace com.mojang.tower {
    class com.mojang.tower.InfoPuff {
    }
  }
  

  namespace com.mojang.tower {
    class com.mojang.tower.Island {
    }
  }
  

  namespace com.mojang.tower {
    class com.mojang.tower.Job {
    }
  }
  

  namespace com.mojang.tower {
    class com.mojang.tower.Monster {
    }
  }
  

  namespace com.mojang.tower {
    class com.mojang.tower.Peon {
    }
  }
  

  namespace com.mojang.tower {
    class com.mojang.tower.Puff {
    }
  }
  

  namespace com.mojang.tower {
    class com.mojang.tower.Resources {
    }
  }
  

  namespace com.mojang.tower {
    class com.mojang.tower.Rock {
    }
  }
  

  namespace com.mojang.tower {
    abstract class com.mojang.tower.Sound {
    }
  }
  

  namespace com.mojang.tower {
    class com.mojang.tower.Sounds {
    }
  }
  

  namespace com.mojang.tower {
    class com.mojang.tower.TargetFilter {
    }
  }
  

  namespace com.mojang.tower {
    class com.mojang.tower.Tower {
    }
  }
  

  namespace com.mojang.tower {
    class com.mojang.tower.TowerApplet {
    }
  }
  

  namespace com.mojang.tower {
    class com.mojang.tower.TowerComponent {
    }
  }
  

  namespace com.mojang.tower {
    class com.mojang.tower.Tree {
    }
  }
  

  namespace com.mojang.tower {
    class com.mojang.tower.Vec {
    }
  }
  

  com.mojang.tower.Entity .up.|> java.lang.Comparable
  com.mojang.tower.Entity o-- com.mojang.tower.Bitmaps : bitmaps
  com.mojang.tower.Entity o-- com.mojang.tower.Island : island
  com.mojang.tower.FarmPlot -up-|> com.mojang.tower.Entity
  com.mojang.tower.House -up-|> com.mojang.tower.Entity
  com.mojang.tower.House o-- com.mojang.tower.HouseType : type
  com.mojang.tower.InfoPuff -up-|> com.mojang.tower.Entity
  com.mojang.tower.Island o-- com.mojang.tower.Resources : resources
  com.mojang.tower.Island o-- com.mojang.tower.TowerComponent : tower
  com.mojang.tower.Job o-- com.mojang.tower.Island : island
  com.mojang.tower.Job o-- com.mojang.tower.Peon : peon
  com.mojang.tower.Job o-- com.mojang.tower.Entity : target
  com.mojang.tower.Monster -up-|> com.mojang.tower.Entity
  com.mojang.tower.Monster o-- com.mojang.tower.Entity : target
  com.mojang.tower.Peon -up-|> com.mojang.tower.Entity
  com.mojang.tower.Peon o-- com.mojang.tower.Job : job
  com.mojang.tower.Puff -up-|> com.mojang.tower.Entity
  com.mojang.tower.Rock -up-|> com.mojang.tower.Entity
  com.mojang.tower.Sounds .up.|> java.lang.Runnable
  com.mojang.tower.Tower -up-|> com.mojang.tower.Entity
  com.mojang.tower.TowerApplet -up-|> java.applet.Applet
  com.mojang.tower.TowerApplet o-- com.mojang.tower.TowerComponent : tower
  com.mojang.tower.TowerComponent .up.|> java.awt.event.MouseListener
  com.mojang.tower.TowerComponent .up.|> java.awt.event.MouseMotionListener
  com.mojang.tower.TowerComponent .up.|> java.lang.Runnable
  com.mojang.tower.TowerComponent -up-|> java.awt.Canvas
  com.mojang.tower.TowerComponent o-- com.mojang.tower.Bitmaps : bitmaps
  com.mojang.tower.TowerComponent o-- com.mojang.tower.Island : island
  com.mojang.tower.Tree -up-|> com.mojang.tower.Entity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
